--- a/startup.html
+++ b/startup.html
@@ -24,7 +24,7 @@
 			<section class="text-center col-12">
 			<hr>
 			<A href="https://mailchi.mp/3971e3a08749/startup">
-				<button type="button" class="btn btn-primary btn-xl">find out more</button>
+			<button class="btn btn-primary btn-xl">find out more</button>
 			</A>
 		</section>
 		</div>
